--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <section id="contact-form" class="bg-light">
         <h1><span class="primary-text">Contact</span> Us</h1>
         <p>Please fill out the form below to contact us</p>
-        <form action="">
+        <form action="/submit" name="contact" method="POST" data-netlify="true">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name">
